Added some logs back in for reading.

--- a/index.html
+++ b/index.html
@@ -8,17 +8,7 @@
 </head>
 <body>
     <h1>Combat Engine</h1>
-    <div id="div1">
-        <p id="p1">Combat Log</p>
-        <p id="p2">=====</p>
-        <p id="p2">Combatants</p>
-        <div>
-            <ul>
-                <li>Red Force</li>
-                <li>Blue Force</li>
-            </ul>
-        </div>
-        <p id="p2">=====</p>
+    <div id="combatLog">
     </div>
 </body>
 </html>
